Fix text-overflow

--- a/src/activity/extend-feeds-live/extend-feeds-live.scss
+++ b/src/activity/extend-feeds-live/extend-feeds-live.scss
@@ -17,7 +17,10 @@
     color: black;
     font-weight: bold;
     line-height: 1.5;
-    display: flex;
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     body.dark & {
       color: #eee;
     }
